updated notebooks & csvs

--- a/notebooks/yearly_emotional_trends.ipynb
+++ b/notebooks/yearly_emotional_trends.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import initial dataset from kaggle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
