--- a/notebooks/department_analysis.ipynb
+++ b/notebooks/department_analysis.ipynb
@@ -13,23 +13,6 @@
     "\n",
     "Timeframe: 2014 to 2023\n",
     "\n",
-    "#### Columns: \n",
-    "- rating: overall rating given by the employee (e.g., 5.0 out of 5)\n",
-    "- status: indicates whether the reviewer is a current or former employee.\n",
-    "- pros: lists the positive aspects of the company or job \n",
-    "- cons: lists the negative aspects faced in the company or job\n",
-    "- recommend: indicates whether the employee would recommend the company to others\n",
-    "- ceo_approval: reflects the employee’s opinion on the CEO’s leadership\n",
-    "- career_opportunities: a rating indicating opportunities for professional growth and advancement\n",
-    "- compensation_and_benefits: a rating reflecting satisfaction with salary, bonuses, and other benefits\n",
-    "- senior_management: a rating evaluating the performance and effectiveness of senior leadership or management\n",
-    "- work/life_balance: a rating that assesses how well the company supports balance between work and personal life\n",
-    "- culture_and_values: a rating reflecting the company’s culture, values, and overall work environment\n",
-    "- diversity_and_inclusion: a rating indicating the company’s efforts for an inclusive and diverse workplace\n",
-    "- job: job title of the reviewer providing the feedback\n",
-    "- year: when the review was submitted\n",
-    "- firm_name: name of the company being reviewed\n",
-    "\n",
     "#### Well-being indicators\n",
     "\n",
     "- Stress Flag: Indicators of job-related stress\n",
@@ -68,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import initial dataset from Kaggle"
+    "### Load initial dataset from Kaggle"
    ]
   },
   {
