--- a/notebooks/hypothesis_testing.ipynb
+++ b/notebooks/hypothesis_testing.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import initial dataset from Kaggle"
+    "### Load the initial dataset from Kaggle"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleaning job titles"
+    "### Clean job titles"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating industries"
+    "### Create industries"
    ]
   },
   {
@@ -645,41 +645,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/7h/j883bpy50yx9ffn06wrdxzy00000gn/T/ipykernel_3508/1633712011.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  sampled_reviews[['pros_sentiment', 'pros_subjectivity']] = sampled_reviews['pros'].apply(lambda x: pd.Series(get_sentiment(x)))\n",
-      "/var/folders/7h/j883bpy50yx9ffn06wrdxzy00000gn/T/ipykernel_3508/1633712011.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  sampled_reviews[['pros_sentiment', 'pros_subjectivity']] = sampled_reviews['pros'].apply(lambda x: pd.Series(get_sentiment(x)))\n",
-      "/var/folders/7h/j883bpy50yx9ffn06wrdxzy00000gn/T/ipykernel_3508/1633712011.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  sampled_reviews[['cons_sentiment', 'cons_subjectivity']] = sampled_reviews['cons'].apply(lambda x: pd.Series(get_sentiment(x)))\n",
-      "/var/folders/7h/j883bpy50yx9ffn06wrdxzy00000gn/T/ipykernel_3508/1633712011.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  sampled_reviews[['cons_sentiment', 'cons_subjectivity']] = sampled_reviews['cons'].apply(lambda x: pd.Series(get_sentiment(x)))\n"
+     "ename": "NameError",
+     "evalue": "name 'sampled_reviews' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eliskasimova/Desktop/data_analytics_course_2024/project_folder/labs/employee_wellbeing_eda/notebooks/hypothesis_testing.ipynb Cell 18\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eliskasimova/Desktop/data_analytics_course_2024/project_folder/labs/employee_wellbeing_eda/notebooks/hypothesis_testing.ipynb#X23sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m blob\u001b[39m.\u001b[39msentiment\u001b[39m.\u001b[39mpolarity, blob\u001b[39m.\u001b[39msentiment\u001b[39m.\u001b[39msubjectivity\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eliskasimova/Desktop/data_analytics_course_2024/project_folder/labs/employee_wellbeing_eda/notebooks/hypothesis_testing.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Apply the sentiment analysis function to 'pros' and 'cons'\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eliskasimova/Desktop/data_analytics_course_2024/project_folder/labs/employee_wellbeing_eda/notebooks/hypothesis_testing.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sampled_reviews[[\u001b[39m'\u001b[39m\u001b[39mpros_sentiment\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mpros_subjectivity\u001b[39m\u001b[39m'\u001b[39m]] \u001b[39m=\u001b[39m sampled_reviews[\u001b[39m'\u001b[39m\u001b[39mpros\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: pd\u001b[39m.\u001b[39mSeries(get_sentiment(x)))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eliskasimova/Desktop/data_analytics_course_2024/project_folder/labs/employee_wellbeing_eda/notebooks/hypothesis_testing.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m sampled_reviews[[\u001b[39m'\u001b[39m\u001b[39mcons_sentiment\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mcons_subjectivity\u001b[39m\u001b[39m'\u001b[39m]] \u001b[39m=\u001b[39m sampled_reviews[\u001b[39m'\u001b[39m\u001b[39mcons\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: pd\u001b[39m.\u001b[39mSeries(get_sentiment(x)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sampled_reviews' is not defined"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Code defines a function to analyze the sentiment and subjectivity of a given text using TextBlob\n",
+    "Then we apply function to the 'pros' and 'cons' columns of sampled reviews, creating new columns for sentiment and subjectivity scores\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "def get_sentiment(text):\n",
     "    blob = TextBlob(text)\n",
     "    return blob.sentiment.polarity, blob.sentiment.subjectivity\n",
@@ -1071,7 +1058,7 @@
    "source": [
     "### Key findings\n",
     "- Among all metrics, work/life balance showed the strongest statistical association with lower burnout levels, emphasizing its critical role in reducing employee exhaustion and emotional fatigue\n",
-    "- senior management (T-stat = -9.0965), culture and values (T-stat = -8.3542), and rating (T-stat = -11.6522) show strong associations with lower stress levels, as rating increases, burnout level is decreasing"
+    "- Senior management, culture and values and rating show strong associations with lower stress levels, as rating increases, burnout level is decreasing"
    ]
   },
   {
