--- a/notebooks/jobs_&_industries.ipynb
+++ b/notebooks/jobs_&_industries.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview\n",
+    "\n",
+    "In this notebook, we will take a closer look at how specific mental health indicators, such as stress, depression, and burnout, impact particular jobs and industries, as well as their correlations.\n",
+    "\n",
+    "\n",
+    "Sample: 100 000 reviews\n",
+    "- Current Employee: 53730\n",
+    "- Former Employee: 46270"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libraries with neccessary functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
