--- a/notebooks/well_being_analysis.ipynb
+++ b/notebooks/well_being_analysis.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview\n",
+    "\n",
+    "In this notebook, we will collect data to explore how well-being metrics relate to overall metrics and analyze the evolution of mental health recognition over the years, focusing on specific companies and job roles.\n",
+    "\n",
+    "Sample: 100 000 reviews\n",
+    "- Current Employee: 53730\n",
+    "- Former Employee: 46270"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libraries with neccessary functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "73d86b9e-0d1c-4610-917d-9dcaa2340233",
@@ -16,6 +41,13 @@
     "from collections import Counter\n",
     "from textblob import TextBlob\n",
     "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import initial dataset from Kaggle"
    ]
   },
   {
@@ -198,6 +230,13 @@
     "    year_column=year_column,\n",
     "    job_column=job_column\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unify column names"
    ]
   },
   {
@@ -1317,6 +1356,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load spacy library for natural language procesing & get the frequency counts per rating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1864,6 +1910,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "This code combines the 'pros' and 'cons' flags for each emotional state by applying a logical OR operation. \n",
+    "It then drops the 'cons' flags and displays the updated dataframe with the combined emotional flags.\n",
+    "\"\"\"\n",
+    "\n",
     "# sort the df in descending order based on any of the rating columns\n",
     "combined_freq_df.sort_values(by='Rating_5.0_Freq_pros', ascending=False, inplace=True)\n",
     "\n",
@@ -2633,7 +2684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save the dataframes for later"
+    "Save the dataframes for further analysis"
    ]
   },
   {
@@ -3128,7 +3179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combining flags together in order to see the analysis over the years"
+    "### Combining flags together in order to see the time trends analysis"
    ]
   },
   {
@@ -6562,252 +6613,6 @@
    "outputs": [],
    "source": [
     "#top_30_companies_by_flags.to_csv(\"../data/clean/top_30_companies_by_flags.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Time trends analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['stress_flag',\n",
-       " 'burnout_flag',\n",
-       " 'anxiety_flag',\n",
-       " 'toxic_flag',\n",
-       " 'supportive_env_flag',\n",
-       " 'depression_flag']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_flags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming original data is available\n",
-    "aggregated_flags_by_year_with_firms = (\n",
-    "    sampled_reviews.groupby(['year', 'firm_name'])[combined_flags].sum().reset_index()\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>firm_name</th>\n",
-       "      <th>stress_flag</th>\n",
-       "      <th>burnout_flag</th>\n",
-       "      <th>anxiety_flag</th>\n",
-       "      <th>toxic_flag</th>\n",
-       "      <th>supportive_env_flag</th>\n",
-       "      <th>depression_flag</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>3D-Systems</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>AFL</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>ALSTOM</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>AXA-UK</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>Afni</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1212</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>WW-WeightWatchers</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1213</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Wacker-Chemie</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1214</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Wayne-Sanderson-Farms</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1215</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>WellSky</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1216</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>William-and-Mary</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1217 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      year              firm_name  stress_flag  burnout_flag  anxiety_flag  \\\n",
-       "0     2015             3D-Systems            0             0             0   \n",
-       "1     2015                    AFL            0             0             0   \n",
-       "2     2015                 ALSTOM            4             0             0   \n",
-       "3     2015                 AXA-UK            0             0             0   \n",
-       "4     2015                   Afni            0             0             0   \n",
-       "...    ...                    ...          ...           ...           ...   \n",
-       "1212  2023      WW-WeightWatchers            0             0             0   \n",
-       "1213  2023          Wacker-Chemie            0             0             0   \n",
-       "1214  2023  Wayne-Sanderson-Farms            0             0             0   \n",
-       "1215  2023                WellSky            0             0             0   \n",
-       "1216  2023       William-and-Mary            0             0             0   \n",
-       "\n",
-       "      toxic_flag  supportive_env_flag depression_flag  \n",
-       "0              0                    0               0  \n",
-       "1              0                    0               0  \n",
-       "2              0                    0               0  \n",
-       "3              0                    0               0  \n",
-       "4              0                    0               0  \n",
-       "...          ...                  ...             ...  \n",
-       "1212           0                    1               0  \n",
-       "1213           0                    1               0  \n",
-       "1214           0                    0               0  \n",
-       "1215           0                    0               0  \n",
-       "1216           0                    0               0  \n",
-       "\n",
-       "[1217 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aggregated_flags_by_year_with_firms"
    ]
   },
   {
