--- a/notebooks/glassdoor_cleaning.ipynb
+++ b/notebooks/glassdoor_cleaning.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview\n",
+    "\n",
+    "In this notebook, we focus on cleaning the initial dataset and handling NaN values, unifying columns and job titles, extracting company names, assigning emotional flags, and analyzing the differences between the initial dataset and the selected sample.\n",
+    "\n",
+    "Initial dataset\n",
+    "- https://www.kaggle.com/datasets/davidgauthier/glassdoor-job-reviews-2\n",
+    "\n",
+    "Timeframe: 2014 to 2023\n",
+    "\n",
+    "### Columns: \n",
+    "\n",
+    "- rating: overall rating given by the employee (e.g., 5.0 out of 5)\n",
+    "- status: indicates whether the reviewer is a current or former employee.\n",
+    "- pros: lists the positive aspects of the company or job \n",
+    "- cons: lists the negative aspects faced in the company or job\n",
+    "- recommend: indicates whether the employee would recommend the company to others\n",
+    "- ceo_approval: reflects the employee’s opinion on the CEO’s leadership\n",
+    "- career_opportunities: a rating indicating opportunities for professional growth and advancement\n",
+    "- compensation_and_benefits: a rating reflecting satisfaction with salary, bonuses, and other benefits\n",
+    "- senior_management: a rating evaluating the performance and effectiveness of senior leadership or management\n",
+    "- work/life_balance: a rating that assesses how well the company supports balance between work and personal life\n",
+    "- culture_and_values: a rating reflecting the company’s culture, values, and overall work environment\n",
+    "- diversity_and_inclusion: a rating indicating the company’s efforts for an inclusive and diverse workplace\n",
+    "- job: job title of the reviewer providing the feedback\n",
+    "- year: when the review was submitted\n",
+    "- firm_name: name of the company being reviewed\n",
+    "\n",
+    "Emotional flags (Additional well-being indicators)\n",
+    "\n",
+    "- Stress Flag: Indicators of job-related stress\n",
+    "- Burnout Flag: Signs of employee burnout\n",
+    "- Anxiety Flag: Mentions of anxiety in reviews\n",
+    "- Supportive Environment Flag: Indicators of supportive workplaces\n",
+    "- Toxic Flag: Signs of toxic work environments\n",
+    "- Depression Flag: Mentions of depressive symptoms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libraries with neccessary functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a4d1d276-aab2-4c32-b586-5edb21bac0b3",
@@ -22,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lodad the dataset"
+    "### Load the initial dataset from Kaggle"
    ]
   },
   {
@@ -39,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform basic overview"
+    "### Get the fundamental overview"
    ]
   },
   {
@@ -495,6 +543,13 @@
     "\n",
     "# Check missing values in the cleaned dataset\n",
     "print(cleaned_reviews.isna().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unify column names"
    ]
   },
   {
@@ -1020,6 +1075,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Well-bwing indicators correlation matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3931e90d-7495-4d84-86dd-90a0ff029a95",
@@ -1120,12 +1182,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess the text using SpaCy\n",
+    "# reprocess the text using SpaCy\n",
     "def preprocess_text_spacy(text):\n",
-    "    # Parse the text using SpaCy\n",
+    "    # parse the text using SpaCy\n",
     "    doc = nlp(text.lower())\n",
     "    \n",
-    "    # Filter tokens: keep only alphabetic words, exclude stopwords and punctuation\n",
+    "    # filter tokens: keep only alphabetic words, exclude stopwords and punctuation\n",
     "    tokens = [token.lemma_ for token in doc if token.is_alpha and not token.is_stop]\n",
     "    \n",
     "    # Join tokens back into a string\n",
@@ -2103,54 +2165,6 @@
     "    print(f\"Median Work/Life Balance: {spacy_filtered['work/life_balance'].median()}\")\n",
     "    print(\"-\" * 40)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "7ad7e791-a822-4685-89a5-4e38de6fb50d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4848740, 26)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cleaned_reviews.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100000, 20)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sampled_reviews(plt, kind= \"bar\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
